--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </h1>
 	<h2>Links:</h2>
 	<ul>
-  <li><a href="index.html">Artificial Intelligence main page</a></li>
+  <li><a href="Artificial Intelligence main page.html">Artificial Intelligence main page</a></li>
   <li><a href="Artificial Intelligence-Breif review.html">Artificial Intelligence-Breif review</a></li>
   <li><a href="Types Of Machine Learning (Artificial Intelligence).html">Types Of Machine Learning (Artificial Intelligence) </a></li>
  <li><a href="Pros and cons of Artificial Intelligence.html">Pros and cons of Artificial Intelligence</a></li>
